--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./images/icon.svg"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,6 +21,7 @@
   <body>
     <main class="container">
       <h3>ADVICE#<span id="order">117</span></h3>
+      <div class="spinner"></div>
       <p id="advice">
         "It is easy to it up and take notice, what's difficult is getting up and taking action."
       </p>
